device: add king

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2023-10-30T09:58:28+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2023-12-10T13:15:31+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,8 +46,8 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2023-10-30T09:56:33+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2023-10-30T09:56:33+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2023-12-10T13:15:31+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2023-12-10T13:15:31+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
@@ -536,7 +536,19 @@
           <ReservedAddresses>192.168.1.82</ReservedAddresses>
           <HostLabel>zima2</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool nextInstance="15"></DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="17">
+          <Enable>TRUE</Enable>
+          <Chaddr>b8:27:eb:e2:d1:10</Chaddr>
+          <ReservedAddresses>192.168.1.91</ReservedAddresses>
+          <HostLabel>pidp11</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="18">
+          <Enable>TRUE</Enable>
+          <Chaddr>08:bf:b8:76:4b:c0</Chaddr>
+          <ReservedAddresses>192.168.1.32</ReservedAddresses>
+          <HostLabel>king</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool nextInstance="19"></DHCPConditionalServingPool>
       </LANHostConfigManagement>
       <X_BROADCOM_COM_IPv6LANHostConfigManagement>
         <DHCPv6ServerEnable>FALSE</DHCPv6ServerEnable>
@@ -554,6 +566,7 @@
       </LANEthernetInterfaceConfig>
       <LANEthernetInterfaceConfig instance="3">
         <Enable>TRUE</Enable>
+        <DuplexMode>Half</DuplexMode>
         <X_BROADCOM_COM_IfName>eth2</X_BROADCOM_COM_IfName>
       </LANEthernetInterfaceConfig>
       <LANEthernetInterfaceConfig instance="4">
@@ -603,7 +616,12 @@
         <X_BROADCOM_COM_Guest2Enable>FALSE</X_BROADCOM_COM_Guest2Enable>
         <X_BROADCOM_COM_Guest2Hiden>FALSE</X_BROADCOM_COM_Guest2Hiden>
         <X_BROADCOM_COM_Guest2IsolateClients>FALSE</X_BROADCOM_COM_Guest2IsolateClients>
-        <AssociatedDevice nextInstance="44"></AssociatedDevice>
+        <AssociatedDevice instance="9210">
+          <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
+          <X_BROADCOM_COM_Ssid>royalty2</X_BROADCOM_COM_Ssid>
+          <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
+        </AssociatedDevice>
+        <AssociatedDevice nextInstance="9211"></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -654,32 +672,37 @@
             <WlMFP>0</WlMFP>
             <WlAPIsolation>1</WlAPIsolation>
             <WlFltMacMode>allow</WlFltMacMode>
-            <WlMacFltCfg instance="55">
-              <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
+            <WlMacFltCfg instance="173">
+              <WlMacAddr>B8:27:EB:E2:D1:10</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="56">
-              <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
-              <WlSsid>royalty2</WlSsid>
-              <WlIfcname>wl0</WlIfcname>
-            </WlMacFltCfg>
-            <WlMacFltCfg instance="57">
-              <WlMacAddr>58:A0:23:CF:E6:8A</WlMacAddr>
-              <WlSsid>royalty2</WlSsid>
-              <WlIfcname>wl0</WlIfcname>
-            </WlMacFltCfg>
-            <WlMacFltCfg instance="58">
-              <WlMacAddr>3C:58:C2:F0:D4:F8</WlMacAddr>
-              <WlSsid>royalty2</WlSsid>
-              <WlIfcname>wl0</WlIfcname>
-            </WlMacFltCfg>
-            <WlMacFltCfg instance="59">
+            <WlMacFltCfg instance="174">
               <WlMacAddr>64:A2:F9:12:F0:EA</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg nextInstance="60"></WlMacFltCfg>
+            <WlMacFltCfg instance="175">
+              <WlMacAddr>3C:58:C2:F0:D4:F8</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="176">
+              <WlMacAddr>58:A0:23:CF:E6:8A</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="177">
+              <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="178">
+              <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg nextInstance="179"></WlMacFltCfg>
             <WlKey64Cfg instance="1">
             </WlKey64Cfg>
             <WlKey64Cfg instance="2">
@@ -779,6 +802,8 @@
       <WLANConfiguration nextInstance="2"></WLANConfiguration>
       <X_VENDOR_WlanConfiguration instance="1">
         <IfName>wl1</IfName>
+        <IfEnable>FALSE</IfEnable>
+        <HideSSID>TRUE</HideSSID>
         <IsolateClients>TRUE</IsolateClients>
         <SSID>royalty5</SSID>
         <BSSID>60:03:47:55:67:3B</BSSID>
@@ -803,6 +828,8 @@
           <WlBssMacAddr>60:03:47:55:67:3B</WlBssMacAddr>
           <WlWpaPsk>XXXXXXXXXXXXXXX</WlWpaPsk>
           <WlAuthMode>psk&#32;psk2</WlAuthMode>
+          <WlEnblSsid>FALSE</WlEnblSsid>
+          <WlHide>TRUE</WlHide>
           <WlAPIsolation>TRUE</WlAPIsolation>
           <WlFltMacMode>allow</WlFltMacMode>
           <X_VENDOR_WlMacFltCfg instance="3">
@@ -879,7 +906,7 @@
       </X_VENDOR_WlanConfiguration>
       <X_VENDOR_WlanConfiguration nextInstance="2"></X_VENDOR_WlanConfiguration>
       <Hosts>
-        <Host nextInstance="19"></Host>
+        <Host nextInstance="50"></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2"></LANDevice>
@@ -963,7 +990,7 @@
       <WANDSLInterfaceConfig>
         <Enable>TRUE</Enable>
         <dslptm>TRUE</dslptm>
-        <dsltime>340</dsltime>
+        <dsltime>144</dsltime>
         <dslup>TRUE</dslup>
         <LinkEncapsulationUsed>G.993.2_Annex_K_PTM</LinkEncapsulationUsed>
         <X_VENDOR_TpsTc>14</X_VENDOR_TpsTc>
@@ -1075,8 +1102,8 @@
     </WANDevice>
     <Layer3Forwarding>
       <ForwardNumberOfEntries>0</ForwardNumberOfEntries>
-      <X_BROADCOM_COM_DefaultConnectionServices>ptm0.1,eth5.1,usb0</X_BROADCOM_COM_DefaultConnectionServices>
-      <X_VENDOR_VirtualDefaultGateway>ptm0.1,eth5.1,usb0</X_VENDOR_VirtualDefaultGateway>
+      <X_BROADCOM_COM_DefaultConnectionServices>ptm0.1,eth5.1</X_BROADCOM_COM_DefaultConnectionServices>
+      <X_VENDOR_VirtualDefaultGateway>ptm0.1,eth5.1,USB3G0</X_VENDOR_VirtualDefaultGateway>
     </Layer3Forwarding>
     <X_BROADCOM_COM_IPv6Layer3Forwarding>
       <ForwardNumberOfEntries>0</ForwardNumberOfEntries>
@@ -1091,7 +1118,7 @@
     </Services>
     <X_BROADCOM_COM_NetworkConfig>
       <DNSIfName>ptm0.1</DNSIfName>
-      <X_VENDOR_VirtualDNSIfName>ptm0.1</X_VENDOR_VirtualDNSIfName>
+      <X_VENDOR_VirtualDNSIfName>ptm0.1,USB3G0</X_VENDOR_VirtualDNSIfName>
     </X_BROADCOM_COM_NetworkConfig>
     <X_BROADCOM_COM_IGMPCfg>
       <IgmpBridgeIfNames>br0&#32;</IgmpBridgeIfNames>
@@ -1128,10 +1155,6 @@
       <Hostname>dukew</Hostname>
       <IpAddress>192.168.1.41</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="7">
-      <Hostname>duke</Hostname>
-      <IpAddress>192.168.1.42</IpAddress>
-    </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="8">
       <Hostname>tinygod1</Hostname>
       <IpAddress>192.168.1.51</IpAddress>
@@ -1145,7 +1168,7 @@
       <IpAddress>192.168.1.61</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="11">
-      <Hostname>gigantori</Hostname>
+      <Hostname>gigantore</Hostname>
       <IpAddress>192.168.1.62</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="12">
@@ -1160,7 +1183,39 @@
       <Hostname>zima2</Hostname>
       <IpAddress>192.168.1.82</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost nextInstance="15"></X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="15">
+      <Hostname>duked</Hostname>
+      <IpAddress>192.168.1.21</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="16">
+      <Hostname>gigantord</Hostname>
+      <IpAddress>192.168.1.21</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="17">
+      <Hostname>duke</Hostname>
+      <IpAddress>192.168.1.42</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="18">
+      <Hostname>dukee</Hostname>
+      <IpAddress>192.168.1.42</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="19">
+      <Hostname>deckd</Hostname>
+      <IpAddress>192.168.1.21</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="20">
+      <Hostname>deck</Hostname>
+      <IpAddress>192.168.1.71</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="21">
+      <Hostname>tinygod</Hostname>
+      <IpAddress>192.168.1.51</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="22">
+      <Hostname>pidp11</Hostname>
+      <IpAddress>192.168.1.91</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost nextInstance="23"></X_VENDOR_StaticDNSHost>
   </InternetGatewayDevice>
 </DslCpeConfig>
  
