device: add king

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2023-12-10T13:15:31+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2023-12-10T13:22:26+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,8 +46,8 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2023-12-10T13:15:31+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2023-12-10T13:15:31+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2023-12-10T13:19:44+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2023-12-10T13:19:44+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
@@ -1215,7 +1215,11 @@
       <Hostname>pidp11</Hostname>
       <IpAddress>192.168.1.91</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost nextInstance="23"></X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost instance="23">
+      <Hostname>king</Hostname>
+      <IpAddress>192.168.1.32</IpAddress>
+    </X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost nextInstance="24"></X_VENDOR_StaticDNSHost>
   </InternetGatewayDevice>
 </DslCpeConfig>
  
