alacritty: split config

--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,222 +1,13 @@
-[[colors.indexed_colors]]
-color = "0x$BASE16[orange]"
-index = 16
-
-[[colors.indexed_colors]]
-color = "0x$BASE16[brown]"
-index = 17
-
-[[colors.indexed_colors]]
-color = "0x$BASE16[lighter_background]"
-index = 18
-
-[[colors.indexed_colors]]
-color = "0x$BASE16[selection_background]"
-index = 19
-
-[[colors.indexed_colors]]
-color = "0x$BASE16[dark_foreground]"
-index = 20
-
-[[colors.indexed_colors]]
-color = "0x$BASE16[light_foreground]"
-index = 21
-
-[colors.bright]
-black =   "0x$BASE16[bright_black]"
-blue =    "0x$BASE16[bright_blue]"
-cyan =    "0x$BASE16[bright_cyan]"
-green =   "0x$BASE16[bright_green]"
-magenta = "0x$BASE16[bright_magenta]"
-red =     "0x$BASE16[bright_red]"
-white =   "0x$BASE16[bright_white]"
-yellow =  "0x$BASE16[bright_yellow]"
-
-[colors.cursor]
-cursor = "0x$BASE16[default_foreground]"
-text = "0x$BASE16[default_background]"
-
-[colors.footer_bar]
-background = "0x$HL_FG"
-foreground = "0x$HL_BG"
-
-[colors.line_indicator]
-background = "0x$HL_FG"
-foreground = "0x$HL_BG"
-
-[colors.normal]
-black =   "0x$BASE16[black]"
-blue =    "0x$BASE16[blue]"
-cyan =    "0x$BASE16[cyan]"
-green =   "0x$BASE16[green]"
-magenta = "0x$BASE16[magenta]"
-red =     "0x$BASE16[red]"
-white =   "0x$BASE16[white]"
-yellow =  "0x$BASE16[yellow]"
-
-[colors.primary]
-background = "0x$BASE16[default_background]"
-bright_foreground = "0x$BASE16[light_foreground]"
-dim_foreground = "0x$BASE16[dark_foreground]"
-foreground = "0x$BASE16[default_foreground]"
-
-[colors.search.focused_match]
-background = "0x$BASE16[yellow]"
-foreground = "0x$BASE16[default_background]"
-
-[colors.search.matches]
-background = "0x$BASE16[orange]"
-foreground = "0x$BASE16[default_background]"
-
-[colors.selection]
-background = "0x$HL_FG"
-text = "0x$HL_BG"
-
-[colors.vi_mode_cursor]
-cursor = "0x$BASE16[default_foreground]"
-text = "0x$BASE16[default_background]"
-
-[cursor]
-vi_mode_style = "Block"
+import = [
+"~/.config/alacritty/appearance.toml",
+"~/.config/alacritty/bindings.toml",
+]
 
 [env]
 TERM = "alacritty-direct"
 
-[font]
-size = $FONT_SIZE_PT
-
-[[keyboard.bindings]]
-key = "N"
-mods = "Control|Shift"
-
-[keyboard.bindings.command]
-program = "term"
-
-[[keyboard.bindings]]
-chars = "\u001B[13;2u"
-key = "Return"
-mode = "Alt"
-mods = "Shift"
-
-[[keyboard.bindings]]
-chars = "\u001B[13;5u"
-key = "Return"
-mode = "Alt"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "Space"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "Space"
-mode = "Vi"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "H"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "H"
-mode = "Vi"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "Return"
-mode = "~Search|Vi"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "Return"
-mode = "~Search|Vi"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "C"
-mode = "Vi"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "C"
-mode = "Vi"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "L"
-mode = "Vi"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "L"
-mode = "Vi"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "Return"
-mode = "Vi"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-action = "ScrollToBottom"
-key = "Return"
-mode = "Vi"
-mods = "Control|Shift"
-
-[[keyboard.bindings]]
-key = "L"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control|Shift"
-
-[keyboard.bindings.command]
-program = "alacritty-clear"
-
-[[keyboard.bindings]]
-key = "Return"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control|Shift"
-
-[keyboard.bindings.command]
-program = "alacritty-clear"
-
-[[keyboard.bindings]]
-action = "First"
-key = 8
-mode = "Vi|~Search"
-mods = "Shift"
-
-[[keyboard.bindings]]
-action = "Last"
-key = 41
-mode = "Vi|~Search"
-
-[[keyboard.bindings]]
-action = "FirstOccupied"
-key = 27
-mode = "Vi|~Search"
-mods = "Shift"
-
-[[keyboard.bindings]]
-action = "Bracket"
-key = 2
-mode = "Vi|~Search"
-mods = "Shift"
-
-[[keyboard.bindings]]
-action = "ResetFontSize"
-key = "Equals"
-mods = "Control"
-
 [window]
-decorations = "none"
+decorations = "None"
+
+[cursor]
+vi_mode_style = "Block"
