alacritty: tidy toml and node wheel failure

--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,3 +1,5 @@
+# TODO mouse wheel scrolls history but does not enter search mode
+
 import = [
 "~/.config/alacritty/appearance.toml",
 "~/.config/alacritty/bindings.toml",
