--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -45,7 +45,6 @@ searchEngines: |-
   y: https://www.youtube.com/results?search_query=%s Youtube
 searchUrl: https://duckduckgo.com/?q=%s
 settingsVersion: 2.0.6
-userDefinedLinkHintCss: ""
-# userDefinedLinkHintCss: |-2
-# STYLESHEEEEEEET
+userDefinedLinkHintCss: |-2
+STYLESHEET
 exclusionRules: []
