devices clean up

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2023-12-10T13:22:26+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2024-03-31T11:14:16+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,8 +46,8 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2023-12-10T13:19:44+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2023-12-10T13:19:44+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2024-03-31T10:56:05+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2024-03-31T10:56:05+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
@@ -452,24 +452,6 @@
           <X_BROADCOM_COM_IfName>br0</X_BROADCOM_COM_IfName>
         </IPInterface>
         <IPInterface nextInstance="2"></IPInterface>
-        <DHCPConditionalServingPool instance="1">
-          <Enable>TRUE</Enable>
-          <Chaddr>D0:50:99:C2:80:DF</Chaddr>
-          <ReservedAddresses>192.168.1.11</ReservedAddresses>
-          <HostLabel>lord</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="2">
-          <Enable>TRUE</Enable>
-          <Chaddr>D0:50:99:E1:73:68</Chaddr>
-          <ReservedAddresses>192.168.1.12</ReservedAddresses>
-          <HostLabel>lord-ipmi-shared</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="3">
-          <Enable>TRUE</Enable>
-          <Chaddr>D0:50:99:E1:74:8D</Chaddr>
-          <ReservedAddresses>192.168.1.13</ReservedAddresses>
-          <HostLabel>lord-ipmi-dedicated</HostLabel>
-        </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="4">
           <Enable>TRUE</Enable>
           <Chaddr>b4:45:06:b6:69:64</Chaddr>
@@ -494,30 +476,6 @@
           <ReservedAddresses>192.168.1.42</ReservedAddresses>
           <HostLabel>duke</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="8">
-          <Enable>TRUE</Enable>
-          <Chaddr>70:85:c2:59:e2:7d</Chaddr>
-          <ReservedAddresses>192.168.1.51</ReservedAddresses>
-          <HostLabel>tinygod1</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="9">
-          <Enable>TRUE</Enable>
-          <Chaddr>70:85:C2:59:E2:7F</Chaddr>
-          <ReservedAddresses>192.168.1.52</ReservedAddresses>
-          <HostLabel>tinygod2</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="10">
-          <Enable>TRUE</Enable>
-          <Chaddr>58:A0:23:CF:E6:8A</Chaddr>
-          <ReservedAddresses>192.168.1.61</ReservedAddresses>
-          <HostLabel>gigantorw</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="11">
-          <Enable>TRUE</Enable>
-          <Chaddr>8C:04:BA:6F:80:C2</Chaddr>
-          <ReservedAddresses>192.168.1.62</ReservedAddresses>
-          <HostLabel>gigantori</HostLabel>
-        </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="12">
           <Enable>TRUE</Enable>
           <Chaddr>50:5A:65:60:76:61</Chaddr>
@@ -536,19 +494,43 @@
           <ReservedAddresses>192.168.1.82</ReservedAddresses>
           <HostLabel>zima2</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="17">
+        <DHCPConditionalServingPool instance="25">
           <Enable>TRUE</Enable>
-          <Chaddr>b8:27:eb:e2:d1:10</Chaddr>
-          <ReservedAddresses>192.168.1.91</ReservedAddresses>
-          <HostLabel>pidp11</HostLabel>
+          <Chaddr>d0:50:99:e1:73:68</Chaddr>
+          <ReservedAddresses>192.168.1.12</ReservedAddresses>
+          <HostLabel>lord0-ipmi-shared</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="18">
+        <DHCPConditionalServingPool instance="26">
           <Enable>TRUE</Enable>
-          <Chaddr>08:bf:b8:76:4b:c0</Chaddr>
-          <ReservedAddresses>192.168.1.32</ReservedAddresses>
-          <HostLabel>king</HostLabel>
+          <Chaddr>d0:50:99:c2:80:df</Chaddr>
+          <ReservedAddresses>192.168.1.11</ReservedAddresses>
+          <HostLabel>lord0</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool nextInstance="19"></DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="27">
+          <Enable>TRUE</Enable>
+          <Chaddr>d0:50:99:e1:74:8d</Chaddr>
+          <ReservedAddresses>192.168.1.13</ReservedAddresses>
+          <HostLabel>lord0-ipmi-dedicated</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="28">
+          <Enable>TRUE</Enable>
+          <Chaddr>d0:50:99:f7:55:26</Chaddr>
+          <ReservedAddresses>192.168.1.14</ReservedAddresses>
+          <HostLabel>lord-ipmi-dedicated</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="29">
+          <Enable>TRUE</Enable>
+          <Chaddr>98:25:4a:73:46:e1</Chaddr>
+          <ReservedAddresses>192.168.1.15</ReservedAddresses>
+          <HostLabel>lord</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="30">
+          <Enable>TRUE</Enable>
+          <Chaddr>d0:50:99:f7:52:b1</Chaddr>
+          <ReservedAddresses>192.168.1.17</ReservedAddresses>
+          <HostLabel>lord-ipmi-shared</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool nextInstance="31"></DHCPConditionalServingPool>
       </LANHostConfigManagement>
       <X_BROADCOM_COM_IPv6LANHostConfigManagement>
         <DHCPv6ServerEnable>FALSE</DHCPv6ServerEnable>
@@ -616,12 +598,12 @@
         <X_BROADCOM_COM_Guest2Enable>FALSE</X_BROADCOM_COM_Guest2Enable>
         <X_BROADCOM_COM_Guest2Hiden>FALSE</X_BROADCOM_COM_Guest2Hiden>
         <X_BROADCOM_COM_Guest2IsolateClients>FALSE</X_BROADCOM_COM_Guest2IsolateClients>
-        <AssociatedDevice instance="9210">
+        <AssociatedDevice instance="29339">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>royalty2</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="9211"></AssociatedDevice>
+        <AssociatedDevice nextInstance="29340"></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -672,37 +654,57 @@
             <WlMFP>0</WlMFP>
             <WlAPIsolation>1</WlAPIsolation>
             <WlFltMacMode>allow</WlFltMacMode>
-            <WlMacFltCfg instance="173">
+            <WlMacFltCfg instance="365">
+              <WlMacAddr>F2:45:4D:38:FE:59</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="366">
               <WlMacAddr>B8:27:EB:E2:D1:10</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="174">
+            <WlMacFltCfg instance="367">
               <WlMacAddr>64:A2:F9:12:F0:EA</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="175">
+            <WlMacFltCfg instance="368">
               <WlMacAddr>3C:58:C2:F0:D4:F8</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="176">
+            <WlMacFltCfg instance="369">
               <WlMacAddr>58:A0:23:CF:E6:8A</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="177">
+            <WlMacFltCfg instance="370">
               <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="178">
+            <WlMacFltCfg instance="371">
               <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg nextInstance="179"></WlMacFltCfg>
+            <WlMacFltCfg instance="372">
+              <WlMacAddr>F4:6D:3F:CE:A4:AF</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="373">
+              <WlMacAddr>D4:3A:2C:4D:EE:7A</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg instance="374">
+              <WlMacAddr>58:B0:D4:6A:7A:5B</WlMacAddr>
+              <WlSsid>royalty2</WlSsid>
+              <WlIfcname>wl0</WlIfcname>
+            </WlMacFltCfg>
+            <WlMacFltCfg nextInstance="375"></WlMacFltCfg>
             <WlKey64Cfg instance="1">
             </WlKey64Cfg>
             <WlKey64Cfg instance="2">
@@ -906,7 +908,7 @@
       </X_VENDOR_WlanConfiguration>
       <X_VENDOR_WlanConfiguration nextInstance="2"></X_VENDOR_WlanConfiguration>
       <Hosts>
-        <Host nextInstance="50"></Host>
+        <Host nextInstance="76"></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2"></LANDevice>
@@ -1132,15 +1134,15 @@
       <SampleSetNumberOfEntries>0</SampleSetNumberOfEntries>
     </PeriodicStatistics>
     <X_VENDOR_StaticDNSHost instance="1">
-      <Hostname>lord</Hostname>
+      <Hostname>lord0</Hostname>
       <IpAddress>192.168.1.11</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="2">
-      <Hostname>lord-ipmi-shared</Hostname>
+      <Hostname>lord0-ipmi-shared</Hostname>
       <IpAddress>192.168.1.12</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="3">
-      <Hostname>lord-ipmi-dedicated</Hostname>
+      <Hostname>lord0-ipmi-dedicated</Hostname>
       <IpAddress>192.168.1.13</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="4">
@@ -1154,22 +1156,6 @@
     <X_VENDOR_StaticDNSHost instance="6">
       <Hostname>dukew</Hostname>
       <IpAddress>192.168.1.41</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="8">
-      <Hostname>tinygod1</Hostname>
-      <IpAddress>192.168.1.51</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="9">
-      <Hostname>tinygod2</Hostname>
-      <IpAddress>192.168.1.52</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="10">
-      <Hostname>gigantorw</Hostname>
-      <IpAddress>192.168.1.61</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="11">
-      <Hostname>gigantore</Hostname>
-      <IpAddress>192.168.1.62</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="12">
       <Hostname>deckw</Hostname>
@@ -1187,39 +1173,27 @@
       <Hostname>duked</Hostname>
       <IpAddress>192.168.1.21</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="16">
-      <Hostname>gigantord</Hostname>
-      <IpAddress>192.168.1.21</IpAddress>
-    </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="17">
       <Hostname>duke</Hostname>
-      <IpAddress>192.168.1.42</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="18">
-      <Hostname>dukee</Hostname>
       <IpAddress>192.168.1.42</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="19">
       <Hostname>deckd</Hostname>
       <IpAddress>192.168.1.21</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="20">
-      <Hostname>deck</Hostname>
-      <IpAddress>192.168.1.71</IpAddress>
+    <X_VENDOR_StaticDNSHost instance="24">
+      <Hostname>lord</Hostname>
+      <IpAddress>192.168.1.15</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="21">
-      <Hostname>tinygod</Hostname>
-      <IpAddress>192.168.1.51</IpAddress>
+    <X_VENDOR_StaticDNSHost instance="25">
+      <Hostname>lord-ipmi-dedicated</Hostname>
+      <IpAddress>192.168.1.14</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="22">
-      <Hostname>pidp11</Hostname>
-      <IpAddress>192.168.1.91</IpAddress>
+    <X_VENDOR_StaticDNSHost instance="26">
+      <Hostname>lord-ipmi-shared</Hostname>
+      <IpAddress>192.168.1.17</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost instance="23">
-      <Hostname>king</Hostname>
-      <IpAddress>192.168.1.32</IpAddress>
-    </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost nextInstance="24"></X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost nextInstance="27"></X_VENDOR_StaticDNSHost>
   </InternetGatewayDevice>
 </DslCpeConfig>
  
